<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.healthyfish.healthyfish.ui.activity.Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ProgressBar
            android:id="@+id/login_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
    </com.zhy.autolayout.AutoLinearLayout>

    <ImageView
        android:layout_width="459px"
        android:layout_height="403px"
        android:layout_marginLeft="312px"
        android:layout_marginTop="208px"
        android:src="@mipmap/ic_logo"
        android:id="@+id/imageView" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="733px"
        android:layout_marginLeft="53px"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="972px"
            android:layout_height="128px"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48px"
                android:layout_height="58px"
                android:layout_marginLeft="48px"
                android:src="@mipmap/ic_login_user"/>

            <EditText
                android:id="@+id/et_login_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36px"
                android:hint="@string/phone_number"
                android:background="@null"
                android:textSize="48px"
                android:textColor="@color/color_hint"/>

        </com.zhy.autolayout.AutoLinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="972px"
            android:layout_height="128px"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48px"
                android:layout_height="58px"
                android:layout_marginLeft="48px"
                android:src="@mipmap/ic_login_password"/>

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36px"
                android:hint="@string/password"
                android:background="@null"
                android:textSize="48px"
                android:textColor="@color/color_hint"/>

        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="972px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54px"
        android:layout_marginTop="1026px"
        android:text="@string/login"
        android:textSize="72px"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="863px"
        android:layout_marginTop="1178px"
        android:text="@string/forgot_password"
        android:textSize="36px"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="205px"
        android:layout_height="wrap_content"
        android:paddingTop="10px"
        android:paddingBottom="10px"
        android:layout_marginLeft="438px"
        android:layout_marginTop="1780px"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="48px"
        android:textColor="@color/colorPrimary" />

</com.zhy.autolayout.AutoRelativeLayout>
